working on the alignment issue. But not yet there...this CSS is shitty

--- a/ui/src/main/java/com/fbratu/relevant/gwt/client/view/um/UMPanel.css
+++ b/ui/src/main/java/com/fbratu/relevant/gwt/client/view/um/UMPanel.css
@@ -1,12 +1,3 @@
-.topRight {
-    /* fixed within viewport */
-    position: fixed;
-
-    /* set position */
-    top: 0px;
-    right: 0px;
-}
-
 .background {
     background-color: #F8F8F8;
     border: 1px none transparent;
